<resources>
    <string name="app_name">Vespapp</string>
    <string name="cabecera">Pregunta %1$s/%2$s</string>

    <string name="btn_selFotos">Seleccionar fotos</string>
    <string name="txt_selFotos">Si ya tienes fotos, ¡añadelas!</string>
    <string name="confirm_cap_titulo">Añade fotos</string>
    <string name="confirm_cap_txt_confirm">La foto es de...</string>
    <string name="nido">Nido</string>
    <string name="avispa">Avispa</string>
    <string name="confirm_cap_DeleteDialog_msg">¿Eliminar imagen?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="añadir_foto">Añade otra foto</string>
    <string name="status_pending">Pendiente</string>
    <string name="status_processed">Tramitado</string>
    <string name="status_processing">En proceso</string>
    <string name="status_unsent">No enviada</string>
    <string name="listo">¡Listo!</string>
    <string name="s_lo_quedan_unas_preguntas">Sólo quedan unas preguntas</string>


</resources>
